--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
+server.port=${PORT:8080}
 spring.application.name=cineverse_two
-spring.profiles.active=${ENV:dev}
+spring.datasource.url=jdbc:mysql://localhost:3306/cineverse_movie_app
+spring.datasource.username=root
+spring.datasource.password=Kart17032005
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
