--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 server.port=${PORT:8080}
 spring.application.name=cineverse_two
-spring.datasource.url=jdbc:mysql://localhost:3306/cineverse_movie_app
+
+# Railway MySQL Connection
+spring.datasource.url=mysql://root:EyllNETMjlIuknjudpQKOAdYHdIHCeBH@metro.proxy.rlwy.net:46794/railway
 spring.datasource.username=root
-spring.datasource.password=Kart17032005
+spring.datasource.password=EyllNETMjlIuknjudpQKOAdYHdIHCeBH
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
