--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=${PORT:8080}
 spring.application.name=cineverse_two
 
 # Railway MySQL Connection
-spring.datasource.url=mysql://root:EyllNETMjlIuknjudpQKOAdYHdIHCeBH@metro.proxy.rlwy.net:46794/railway
+spring.datasource.url=jdbc:mysql://metro.proxy.rlwy.net:46794/railway
 spring.datasource.username=root
 spring.datasource.password=EyllNETMjlIuknjudpQKOAdYHdIHCeBH
 
