--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
 server.port=${PORT:8080}
 spring.application.name=cineverse_two
 
-# Railway MySQL Connection
-spring.datasource.url=jdbc:mysql://metro.proxy.rlwy.net:46794/railway
+# InfinityFree MySQL Connection
+spring.datasource.url=jdbc:mysql://localhost:3306/cineverse_movie_app
 spring.datasource.username=root
-spring.datasource.password=EyllNETMjlIuknjudpQKOAdYHdIHCeBH
+spring.datasource.password=Kart17032005
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+server.tomcat.max-http-form-post-size=10MB
+server.tomcat.max-swallow-size=10MB
+
+spring.web.resources.static-locations=file:uploaded/
