--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,31 @@
-server.port=${PORT:8080}
+# -----------------------------
+# Server Settings
+# -----------------------------
+server.port=${PORT:8080}               
 spring.application.name=cineverse_two
 
-# InfinityFree MySQL Connection
-spring.datasource.url=jdbc:mysql://localhost:3306/cineverse_movie_app
+# -----------------------------
+# MySQL Database Configuration
+# -----------------------------
+spring.datasource.url=jdbc:mysql://10.26.135.247:3306/cineverse_movie_app
 spring.datasource.username=root
 spring.datasource.password=Kart17032005
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# -----------------------------
+# File Upload Settings
+# -----------------------------
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 server.tomcat.max-http-form-post-size=10MB
 server.tomcat.max-swallow-size=10MB
 
+# -----------------------------
+# Static File Serving
+# -----------------------------
 spring.web.resources.static-locations=file:uploaded/
